@@ -4,7 +4,7 @@
 // Author:
 //   Jb Evain (jbevain@gmail.com)
 //
-// (C) 2005 Jb Evain
+// (C) 2005 - 2007 Jb Evain
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -32,6 +32,7 @@ namespace Mono.Cecil.Signatures {
 
 	internal sealed class SZARRAY : SigType {
 
+		public CustomMod [] CustomMods;
 		public SigType Type;
 
 		public SZARRAY () : base (ElementType.SzArray)
