@@ -4,7 +4,7 @@
 // Author:
 //   Jb Evain (jbevain@gmail.com)
 //
-// (C) 2005 Jb Evain
+// (C) 2005 - 2007 Jb Evain
 //
 // Permission is hereby granted, free of charge, to any person obtaining
 // a copy of this software and associated documentation files (the
@@ -1021,6 +1021,7 @@ namespace Mono.Cecil {
 				ArrayType aryType = type as ArrayType;
 				if (aryType.IsSizedArray) {
 					SZARRAY szary = new SZARRAY ();
+					szary.CustomMods = GetCustomMods (aryType.ElementType);
 					szary.Type = GetSigType (aryType.ElementType);
 					return szary;
 				}
@@ -1049,6 +1050,7 @@ namespace Mono.Cecil {
 
 				ARRAY ary = new ARRAY ();
 				ary.Shape = shape;
+				ary.CustomMods = GetCustomMods (aryType.ElementType);
 				ary.Type = GetSigType (aryType.ElementType);
 				return ary;
 			} else if (type is PointerType) {
